# UNIX-based-Event-Monitoring-Infrastructure

./: .gitattributes  .gitignore  ASSIGNMENT.md  CMakeLists.txt  LICENSE  README.md  REPORT.md  analyze.c  analyze_log  parallel_analyze.c  run_monitor.sh
.github/workflows/: c-build.yml
monitor/processed/: alerts.raw  alerts.sorted
monitor/reports/: daily_summary.txt
